
2000-10-12  Stefan Petersen  <spe@geda.seul.org>

	* src/gnetlist.c: Fixed a screw up that made gnetlist fail
	  compiling.
	
2000-10-10  Stefan Petersen  <spe@geda.seul.org>

	* src/gnetlist.c: Honours the error code returned from f_open
	  from now on and tells invoker it didn't find the file.

2000-10-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Removed an old GTK+ test which is no longer used
	
2000-10-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_traverse.c: Changed the code which reports if a uref is
	  missing or not.  Should be a little better, but might falsely
	  report missing urefs

        * src/gnetlist.c: Changed CYGWIN32 warning message

2000-10-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_net.c: Fixed a lame error message to be a little more 
	  descripting (when you forget uref or pin number attributes)

2000-08-21  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.c: Got gnetlist to build with all the libgeda modifications

2000-07-12  Matt Ettus  <matt@ettus.com>

	* Fixed autoconf/automake stuff to install protel and bae backends

	* scheme/gnetlist.scm:  New function get-component-text to look
	  for value, label, and device text in that order

	* scheme/gnet-allegro.scm:  Use the above function

2000-07-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Bumped version up to 20000704a so people know they 
	  have applied the 20000704a patch correctly.

2000-07-05  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-bae.scm, scheme/gnet-pads.scm, scheme/gnet-protelII.scm:
	  These files still referenced the "physical" attribute, when instead
	  it should be "footprint"

	* src/s_traverse.c: Because of my overloading of the "label=" attribute
	  it was possible for a pin to supply a label to net, which is a big
	  no-no (bug). Fixed by checking to make sure object is not a pin.

2000-07-04  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/*.c: Updated copyright info in each file
